cmake_minimum_required(VERSION 3.10)
project(Pics VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_COLOR_DIAGNOSTICS ON)

include(CTest)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin/Debug")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/lib/Debug")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/Release")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/lib/Release")

# Clangd needs it
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Custom options
option(BUILD_TESTS "Enable building tests" OFF)
option(BUILD_SHARED_LIBS "Build libraries as shared" OFF)
option(ENABLE_PROFILING "Build profiling lib (Tracy)" OFF)

if (BUILD_SHARED_LIBS)
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
endif()

# Other Cmake files
# include(cmake/UpdateSubmodules.cmake)
# Platform specific
if (MSVC)
    include(cmake/MSVC.cmake)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    include(cmake/UNIX.cmake)
endif()

# Include directories
include_directories("${CMAKE_SOURCE_DIR}/include")

# Source files
set(LIB_NAME "libpics")
file(GLOB_RECURSE BASE_SRC CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/src/*.cpp" "{CMAKE_SOURCE_DIR}/src/*.c")
add_library(${LIB_NAME} ${BASE_SRC})
set_target_properties(${LIB_NAME} PROPERTIES PREFIX "") # So the name isn't liblibpics

# Compile definitions
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	message(STATUS "Defining DEBUG macro")
	target_compile_definitions(${LIB_NAME} PUBLIC DEBUG=1)
endif()
target_compile_definitions(${LIB_NAME} PUBLIC "APP_NAME=\"${CMAKE_PROJECT_NAME}\"")
target_compile_definitions(${LIB_NAME} PUBLIC ROOT_DIR="${CMAKE_SOURCE_DIR}")

# Set library directory
set(DEPS_DIR "${CMAKE_SOURCE_DIR}/deps")

# Threads
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(${LIB_NAME} PUBLIC Threads::Threads)
# target_link_libraries("${LIB_NAME}Tests" Threads::Threads)

# FMT
# find_package(fmt REQUIRED)
# target_link_libraries(${LIB_NAME} PUBLIC fmt::fmt)
set(FMT_DIR "${DEPS_DIR}/fmt")
add_subdirectory("${FMT_DIR}")
target_link_libraries(${LIB_NAME} PUBLIC fmt)
target_include_directories(${LIB_NAME} PUBLIC "${FMT_DIR}/include")

# OpenImageIO
# include(FetchContent)

# FetchContent_Declare(
#   OpenImageIO
#   GIT_REPOSITORY https://github.com/AcademySoftwareFoundation/OpenImageIO.git
#   GIT_TAG release
#   SOURCE_DIR ${DEPS_DIR}/OpenImageIO
#   CMAKE_ARGS
#     -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/oiio_install

#     -DBUILD_SHARED_LIBS=OFF
#     -DLINKSTATIC=ON
#     -DUSE_SIMD=sse4.2

#     -DUSE_PYTHON=OFF
#     -DUSE_QT=OFF
#     -DUSE_NUKE=OFF
#     -DUSE_OPENVDB=OFF
#     -DUSE_FREETYPE=OFF
#     -DUSE_DCMTK=OFF
#     -DUSE_OPENCV=OFF
#     -DUSE_FFMPEG=OFF
#     -DUSE_PTEX=OFF
#     -DUSE_FREETYPE=OFF
#     -DUSE_OPENCOLORIO=OFF

#     -DUSE_LIBHEIF=ON
#     -DUSE_TBB=ON
#     -DUSE_GIF=ON
#     -DUSE_OPENJPEG=ON
#     -DUSE_LIBRAW=ON
#     -DUSE_JXL=ON
#     -DUSE_WEBP=ON
#     -DUSE_EXTERNAL_PUGIXML=OFF

#     -DOIIO_BUILD_TOOLS=OFF
#     -DOIIO_BUILD_TESTS=OFF
#     -DBUILD_TESTING=OFF
#     -DSTOP_ON_WARNING=OFF
#     -DOpenImageIO_BUILD_MISSING_DEPS=""

#     -DOpenImageIO_REQUIRED_DEPS="WebP;JPEGTurbo;TIFF;OpenEXR;PNG;OpenJPEG;fmt;Robinmap;ZLIB;pugixml"

#     -DFMT_INCLUDE_DIR=${FMT_DIR}/include
#     -Dfmt_ROOT=${FMT_DIR}
# )
# FetchContent_MakeAvailable(OpenImageIO)
# target_link_libraries(${LIB_NAME} PRIVATE OpenImageIO::OpenImageIO)


# find_package(OpenImageIO REQUIRED)
# target_link_libraries(${LIB_NAME} PRIVATE OpenImageIO::OpenImageIO)
# target_include_directories(${LIB_NAME} PRIVATE ${OpenImageIO_INCLUDE_DIRS})

# set(OIIO_DIR "${DEPS_DIR}/OpenImageIO")
# set(USE_PYTHON OFF CACHE BOOL "" FORCE)
# set(OIIO_BUILD_TESTS OFF CACHE BOOL "" FORCE)
# set(OIIO_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
# set(USE_QT OFF CACHE BOOL "" FORCE)
# set(BUILD_SHARED_LIBS OFF)
# set(LINKSTATIC ON)
# set(OpenImageIO_REQUIRED_DEPS "WebP$<SEMICOLON>JPEGTurbo$<SEMICOLON>TIFF$<SEMICOLON>OpenEXR$<SEMICOLON>PNG$<SEMICOLON>OpenJPEG$<SEMICOLON>fmt$<SEMICOLON>Robinmap$<SEMICOLON>ZLIB$<SEMICOLON>pugixml")
# set(USE_LIBHEIF ON)
# set(USE_TBB ON)
# set(USE_GIF ON)
# set(USE_OPENJPEG ON)
# set(USE_LIBRAW ON)
# set(USE_JXL ON)
# set(USE_WEBP ON)
# set(USE_EXTERNAL_PUGIXML OFF)

# set(STOP_ON_WARNING OFF)

# set(FMT_INCLUDE_DIR "${FMT_DIR}/include/")
# set(fmt_ROOT "${FMT_DIR}")

# set(USE_SIMD sse4.2)

# set(USE_NUKE OFF)
# set(USE_OPENVDB OFF)
# set(USE_FREETYPE OFF)
# set(USE_DCMTK OFF)
# set(USE_QT OFF)
# set(USE_PYTHON OFF)
# set(USE_OPENCV OFF)
# set(USE_FFMPEG OFF)
# set(USE_PTEX OFF)
# set(USE_FREETYPE OFF)
# set(USE_OPENCOLORIO OFF)
# set(OIIO_BUILD_TOOLS OFF)
# set(OIIO_BUILD_TESTS OFF)
# set(BUILD_TESTING OFF)
# set(OpenImageIO_BUILD_MISSING_DEPS "")
# #   -DJPEG_ROOT=${LIBDIR}/jpeg/
# #   -Dlibjpeg-turbo_ROOT=${LIBDIR}/jpeg/
# #   -DOpenJPEG_ROOT=${LIBDIR}/openjpeg
# #   -DOPENEXR_ILMTHREAD_LIBRARY=${LIBDIR}/openexr/lib/${LIBPREFIX}IlmThread${OPENEXR_VERSION_POSTFIX}${SHAREDLIBEXT}
# #   -DOPENEXR_IEX_LIBRARY=${LIBDIR}/openexr/lib/${LIBPREFIX}Iex${OPENEXR_VERSION_POSTFIX}${SHAREDLIBEXT}
# #   -DOPENEXR_ILMIMF_LIBRARY=${LIBDIR}/openexr/lib/${LIBPREFIX}IlmImf${OPENEXR_VERSION_POSTFIX}${SHAREDLIBEXT}
# #   -DPUGIXML_LIBRARY=${LIBDIR}/pugixml/lib/${LIBPREFIX}pugixml${LIBEXT}
# #   -DPUGIXML_INCLUDE_DIR=${LIBDIR}/pugixml/include/
# #   -Dpugixml_DIR=${LIBDIR}/pugixml/lib/cmake/pugixml
# #   -DOpenColorIO_DIR=${LIBDIR}/opencolorio/lib/cmake/OpenColorIO
# #   -DRobinmap_ROOT=${LIBDIR}/robinmap
# #   -DWebP_ROOT=${LIBDIR}/webp
# #   -DOpenEXR_ROOT=${LIBDIR}/openexr
# #   -DImath_ROOT=${LIBDIR}/imath
# #   -Dpybind11_ROOT=${LIBDIR}/pybind11
# #   -DPython_EXECUTABLE=${PYTHON_BINARY}
# #   -DPython3_EXECUTABLE=${PYTHON_BINARY}
# #   -DTBB_ROOT=${LIBDIR}/tbb
# #   -Dlibdeflate_ROOT=${LIBDIR}/deflate
# add_subdirectory("${OIIO_DIR}")
# target_link_libraries(${LIB_NAME} PRIVATE OpenImageIO::OpenImageIO)
# target_include_directories(OpenImageIO PRIVATE ${OIIO_DIR}/src/include)
# target_include_directories(${LIB_NAME} PRIVATE ${OIIO_DIR}/src)

# NLOHMANN JSON
set(JSON_DIR "${DEPS_DIR}/json")
add_subdirectory("${JSON_DIR}")
target_link_libraries(${LIB_NAME} PUBLIC nlohmann_json::nlohmann_json)
target_include_directories(${LIB_NAME} PUBLIC "${JSON_DIR}/include")

# SPDLOG
# find_package(spdlog REQUIRED)
# target_link_libraries(${LIB_NAME} PUBLIC spdlog::spdlog)
set(SPDLOG_DIR "${DEPS_DIR}/spdlog")
add_subdirectory("${SPDLOG_DIR}")
target_link_libraries(${LIB_NAME} PRIVATE spdlog)
target_include_directories(${LIB_NAME} PRIVATE "${SPDLOG_DIR}/include")

# GLFW
set(GLFW_DIR "${DEPS_DIR}/glfw")
add_subdirectory("${GLFW_DIR}")
target_include_directories(${LIB_NAME} PUBLIC "${GLFW_DIR}/include")
target_link_libraries(${LIB_NAME} PUBLIC glfw)
target_compile_definitions(${LIB_NAME} PUBLIC GLFW_INCLUDE_NONE)
# target_link_libraries("${LIB_NAME}Tests" glfw)

# GLAD
set(GLAD_DIR "${DEPS_DIR}/glad")
add_library(glad STATIC "${GLAD_DIR}/src/glad.c")
target_include_directories(glad PUBLIC "${GLAD_DIR}/include")
target_include_directories(${LIB_NAME} PUBLIC "${GLAD_DIR}/include")
target_link_libraries(${LIB_NAME} PUBLIC glad ${CMAKE_DL_LIBS})
# target_link_libraries("${LIB_NAME}Tests" glad ${CMAKE_DL_LIBS})

# ImGui
set(IMGUI_DIR "${DEPS_DIR}/imgui")
add_library("imgui"
    "${IMGUI_DIR}/imgui.cpp"
    "${IMGUI_DIR}/imgui_demo.cpp"
    "${IMGUI_DIR}/imgui_draw.cpp"
    "${IMGUI_DIR}/imgui_tables.cpp"
    "${IMGUI_DIR}/imgui_widgets.cpp"
    "${IMGUI_DIR}/backends/imgui_impl_glfw.cpp"
    "${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp"
    )
target_include_directories(imgui PUBLIC "${IMGUI_DIR}")
target_link_libraries(imgui PUBLIC glfw glad)
target_include_directories(${LIB_NAME} PUBLIC "${IMGUI_DIR}")
target_link_libraries(${LIB_NAME} PUBLIC imgui)
# target_link_libraries("${LIB_NAME}Tests" imgui)

# SQLite3
include(FetchContent)

FetchContent_Declare(
  sqlite3
  URL https://sqlite.org/2025/sqlite-amalgamation-3490100.zip
  URL_HASH SHA256=6cebd1d8403fc58c30e93939b246f3e6e58d0765a5cd50546f16c00fd805d2c3
)

FetchContent_MakeAvailable(sqlite3)

add_library(sqlite3 ${sqlite3_SOURCE_DIR}/sqlite3.c)
target_include_directories(sqlite3 PUBLIC ${sqlite3_SOURCE_DIR})
target_link_libraries(${LIB_NAME} PUBLIC sqlite3)
# target_link_libraries("${PROJECT_NAME}Tests" sqlite3)

# GGML
set(GGML_DIR "${DEPS_DIR}/ggml")
add_subdirectory("${GGML_DIR}")
target_link_libraries(${LIB_NAME} PUBLIC ggml)
target_include_directories(${LIB_NAME} PUBLIC "${GGML_DIR}/include")
# target_link_libraries("${LIB_NAME}Tests" ggml)

# Usearch
set(USEARCH_DIR "${DEPS_DIR}/usearch")
add_subdirectory("${USEARCH_DIR}")
target_link_libraries(${LIB_NAME} PUBLIC usearch)
target_include_directories(${LIB_NAME} PUBLIC "${USEARCH_DIR}/include")
# target_link_libraries("${LIB_NAME}Tests" usearch)

# STB
set(STB_DIR "${DEPS_DIR}/stb")
file(MAKE_DIRECTORY ${STB_DIR})

set(STB_IMAGE_URL "https://raw.githubusercontent.com/nothings/stb/master/stb_image.h")
set(STB_IMAGE_WRITE_URL "https://raw.githubusercontent.com/nothings/stb/master/stb_image_write.h")
set(STB_IMAGE_RESIZE_URL "https://raw.githubusercontent.com/nothings/stb/master/stb_image_resize2.h")

file(DOWNLOAD ${STB_IMAGE_URL} ${STB_DIR}/stb_image.h)
file(DOWNLOAD ${STB_IMAGE_WRITE_URL} ${STB_DIR}/stb_image_write.h)
file(DOWNLOAD ${STB_IMAGE_RESIZE_URL} ${STB_DIR}/stb_image_resize2.h)

target_include_directories(${LIB_NAME} PUBLIC "${STB_DIR}")
# target_include_directories("${LIB_NAME}Tests" PUBLIC "${STB_DIR}")

# juliettef/IconFontCppHeaders
set(ICON_FONT_DIR "${DEPS_DIR}/stb")
file(MAKE_DIRECTORY ${ICON_FONT_DIR})

set(ICON_FONT_LUCIDE_URL "https://raw.githubusercontent.com/juliettef/IconFontCppHeaders/refs/heads/main/IconsLucide.h")
file(DOWNLOAD ${ICON_FONT_LUCIDE_URL} ${ICON_FONT_DIR}/IconsLucide.h)

target_include_directories(${LIB_NAME} PUBLIC "${STB_DIR}")

# wolfpld/tracy
if(ENABLE_PROFILING)
    set(TRACY_DIR "${DEPS_DIR}/tracy")
    add_library(tracy STATIC "${TRACY_DIR}/public/TracyClient.cpp")
    target_include_directories(tracy PUBLIC "${TRACY_DIR}/public")
    
    target_compile_definitions(tracy PUBLIC "ENABLE_PROFILING=1")
    target_compile_definitions(tracy PUBLIC TRACY_ENABLE)
    target_link_libraries(${LIB_NAME} PUBLIC tracy)
    target_include_directories(${LIB_NAME} PUBLIC "${TRACY_DIR}/public")
else()
    target_compile_definitions(tracy PUBLIC "ENABLE_PROFILING=0")
endif()

# Tests
if (BUILD_TESTS)
    include(cmake/Tests.cmake)
endif()

# Main
add_executable(${CMAKE_PROJECT_NAME} "${CMAKE_SOURCE_DIR}/main.cpp")
target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${LIB_NAME})